# meshnet

./: .dockerignore  .gitignore  Dockerfile  README.md  THREAT_MODEL.md  docker-compose.yaml  example-1.conf  example-2.conf  main.py  meshtastic_socket.py  pyproject.toml  test_pubsub.py
.agents/: project_context.md
.github/workflows/: pypi-deploy.yml
meshnet/: __init__.py  cli.py  config.py  crypto.py  daemon.py  session.py
meshnet/cli/: __init__.py
meshnet/meshtastic_core/: __init__.py
meshnet/vpn/: __init__.py  config.py  crypto.py  daemon.py  routing.py  session.py  tap.py  transport.py
tests/: conftest.py
tests/integration/: test_daemon.py  test_handshake_transport.py
tests/regression/: test_security.py
tests/unit/: test_cli.py  test_config.py  test_crypto.py  test_meshtastic_core.py  test_routing.py  test_session.py  test_tap.py  test_transport.py
