[project]
name = "meshtastic-net"
version = "0.1.0"
description = "MeshNet: WireGuard-like VPN over Meshtastic mesh radio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "meshtastic>=2.7.8",
    "cryptography>=44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meshnet"]

[project.scripts]
meshnet = "meshnet.cli:main"
