[project]
name = "meshnet"
version = "0.1.0"
description = "MeshNet: WireGuard-like VPN over Meshtastic mesh radio"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
authors = [
    { name = "Adam Hlaváček" },
]
dependencies = [
    "meshtastic>=2.7.8",
    "cryptography>=44.0",
]

[project.urls]
Homepage = "https://github.com/esoadamo/meshnet"
Repository = "https://github.com/esoadamo/meshnet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meshnet"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[project.scripts]
meshnet = "meshnet.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
